--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ p{
 	width:100%;
 	height:30%;
 	background-color:#759370;/*green*/
-	background-image:url("images/gbackground.jpg");
+	background-image:url("gbackground.jpg");
 	background-size:cover;
 }
 .big-row{
@@ -54,7 +54,7 @@ p{
 	display:flex;
 	height:100%;
 	width:30%;
-	background-image:url("images/dbackground.jpg");
+	background-image:url("dbackground.jpg");
 }
 .big-column{
 	display:block;
@@ -84,7 +84,7 @@ p{
 	background-color:#5894f5;/*blue*/
 	color:#f7eccd;/*clay white*/
 }
-.box4{background-image:url("images/wbackground.jpg");}
+.box4{background-image:url("wbackground.jpg");}
 /*responsiveness code*/
 @media only screen and (max-width:700px){
 	.map{display:none;}
@@ -112,7 +112,7 @@ p{
 	}
 	.box1{
 		display:block;
-		background-image:url("images/darbuka_map.png");
+		background-image:url("darbuka_map.png");
 		background-size:cover;
 	}
 	.box4{display:flex;}
